--- a/main.html
+++ b/main.html
@@ -11,7 +11,7 @@ email: ryan_gutierrez@uml.student.edu
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Scrabble Game</title>
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="styles.css">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js"></script>
 </head>
@@ -26,6 +26,6 @@ email: ryan_gutierrez@uml.student.edu
     
     <div id="scoreBoard">Score: 0</div>
 
-    <script src="js/scrabble.js"></script>
+    <script src="scrabble.js"></script>
 </body>
 </html>
